# rudu

./: .env.example  .gitignore  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  README.md  RELEASE_PLAN.md  RELEASE_SETUP_GUIDE.md  certificate-base64.txt  components.json  index.html  install.sh  package-lock.json  package.json  plan-jsonl.md  plan.md  tailwind.config.js  tsconfig.json  vite.config.ts
.factory/: init.sh  services.yaml
.github/: FUNDING.yml
.github/workflows/: build-test.yml  release.yml
.playwright-mcp/: page-2026-05-20T13-50-27-019Z.yml
cloudflare/remote-review/: .dev.vars.example  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
research_acp_codex_observability/: findings.md  research_plan.md
research_acp_model_switcher/: findings.md  implementation_plan.md  research_plan.md
research_chat_scroll_api/: findings_use_stick_to_bottom.md  research_plan.md
research_lexical_prompt_input/: findings_lexical_prompt_input.md  research_plan.md
research_pi_acp_integration/: findings_acp_capabilities.md  findings_pi_acp_adapter.md  findings_pi_tools.md  research_plan.md  research_report.md
scripts/: prepare-codex-acp-sidecar.ts  sync-model-provider-logos.ts
src/: App.tsx  index.css  index.tsx  main.tsx  pierre-patch-parser-worker.ts  routeTree.gen.ts  router-context.ts  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  linear_mcp.rs  main.rs
src-tauri/src/cache/: connection.rs  diffs.rs  mod.rs  pull_requests.rs  repos.rs  review_sessions.rs  schema.rs  tracked_pull_requests.rs
src-tauri/src/commands/: chapters.rs  codex_acp.rs  initial_cache.rs  issues.rs  mod.rs  model_provider_assets.rs  preflight.rs  pull_request_details.rs  pull_requests.rs  remote_review.rs  repos.rs  review_comments.rs  review_session.rs  tracked_pull_requests.rs
src-tauri/src/github/: mod.rs
src-tauri/src/linear/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: chapters.rs  diff_data.rs  issues.rs  llm.rs  mod.rs  pull_request_details.rs  pull_request_sync.rs  remote_review.rs  remote_review_config.rs  review_graphql.rs  review_session.rs
src-tauri/src/services/remote_review/: acp.rs  pi.rs  pi_extension.ts  session.rs  worker.rs  workspace.rs
src-tauri/src/services/review_session/: acp.rs  session.rs  store.rs  walkthrough.rs  workspace.rs
src-tauri/src/services/review_session/acp/: adapter.rs  client_services.rs  codex.rs  debug.rs  events.rs  mcp.rs  opencode.rs  permissions.rs  runtime_errors.rs  tools.rs
src-tauri/src/services/review_session/walkthrough_generator/: codex.rs  json_text.rs  mod.rs  opencode.rs
src-tauri/src/support/: cli.rs  mod.rs
(+399 files in other folders)
