[package]
name = "rudu"
version = "0.3.0"
description = "A desktop app for browsing GitHub pull request diffs"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rudu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-decorum = { git = "https://github.com/clearlysid/tauri-plugin-decorum", branch = "main" }
agent-client-protocol = "0.11.1"
agent-client-protocol-tokio = "0.11.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
getrandom = "0.2"
tokio = { version = "1", features = ["rt", "sync"] }
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
flate2 = "1"
sha2 = "0.10"
tar = "0.4"
zip = "8"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
